# pysynthetic

./: .gitignore  .project  .pydevproject  LICENSE.txt  MANIFEST.in  README.rst  make-readme-rst.sh  pyparsing.py  pysynthetic.py  requirements.txt  setup.cfg  setup.py  version.conf
docs/: Makefile  conf.py  description.rst  examples.rst  index.rst  installation.rst  make.bat  module_documentation.rst
docs/html/: .buildinfo  advanced_usage.html  description.html  examples.html  genindex.html  index.html  indices_and_tables.html  installation.html  module_documentation.html  objects.inv  py-modindex.html  resources.html  search.html  searchindex.js
docs/html/.doctrees/: advanced_usage.doctree  description.doctree  environment.pickle  examples.doctree  index.doctree  indices_and_tables.doctree  installation.doctree  module_documentation.doctree  resources.doctree
docs/html/_modules/: index.html  synthetic.html
docs/html/_sources/: advanced_usage.txt  index.txt  indices_and_tables.txt  installation.txt  resources.txt
synthetic/: __init__.py  accessor_delegate.py  accessor_factory.py  accessor_name_maker_camel_case.py  accessor_name_maker_underscore.py  decorators.py  exceptions.py  i_accessor_name_maker.py  i_member_delegate.py  i_member_factory.py  i_naming_convention.py  naming_convention_camel_case.py  naming_convention_underscore.py  property_delegate.py  property_factory.py  synthetic_class_controller.py  synthetic_comparison_factory.py  synthetic_constructor_factory.py  synthetic_data.py  synthetic_decorator_factory.py  synthetic_member.py  synthetic_meta_data.py
tests/: test_pysynthetic.py  test_synthetic.py  test_synthetic_constructor.py  test_synthetic_equality.py  test_synthetic_member.py  test_synthetic_property.py
