[metadata]
name = pysynthetic
version = 0.4.5
summary = Easy Python class writing and type checking
description-file = README.rst
download_url = https://pypi.python.org/pypi/pysynthetic/
author = Younes JAAIDI
author_email = yjaaidi@gmail.com
requires-python = >=2.7
requires-dist = pycontracts

[files]
packages = synthetic

