[metadata]
name = pysynthetic
version = 0.4.11
author = Younes JAAIDI
author_email = yjaaidi@gmail.com
maintainer = Younes JAAIDI
maintainer_email = yjaaidi@gmail.com
home_page = https://github.com/yjaaidi/pysynthetic
download_url = https://pypi.python.org/pypi/pysynthetic/
summary = Easy Python class writing and type checking
description-file = README.rst
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
    Topic :: Utilities
platform = any
license = MIT
requires-python = >=2.7
requires-dist =
    pycontracts

[files]
packages = synthetic

