[metadata]
name = pysynthetic
version = 0.5.3
author = Younes JAAIDI
author_email = yjaaidi@gmail.com
maintainer = Younes JAAIDI
maintainer_email = yjaaidi@gmail.com
url = https://github.com/yjaaidi/pysynthetic
download_url = https://pypi.python.org/pypi/pysynthetic/
description = Easy Python class writing and type checking
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
    Topic :: Utilities
platforms = any
license = MIT

[options]
python_requires = >=2.7
install_requires =
    pycontracts>=1.7.8
packages = synthetic

